appId: app.axross.juicio
---
- launchApp
- tapOn:
    id: 'tab-bar-item-settings'
- assertVisible:
    id: 'title'
    childOf:
      id: 'settings-nav-bar'
    text: 'Settings'

- tapOn:
    id: 'settings-language-row'
- assertVisible:
    id: 'title'
    childOf:
      id: 'settings-language-nav-bar'
    text: 'Language'

- tapOn:
    id: 'settings-language-ja'
- assertVisible:
    id: 'title'
    childOf:
      id: 'settings-language-nav-bar'
    text: '言語'
- assertVisible:
    id: 'settings-language-ja'
    checked: true

- tapOn:
    id: 'back'
    childOf:
      id: 'settings-language-nav-bar'
- assertVisible:
    id: 'title'
    childOf:
      id: 'settings-nav-bar'
    text: '設定'
- assertVisible:
    id: 'tab-bar-item-settings'
    text: '設定'

- tapOn:
    id: 'settings-language-row'
- assertVisible:
    id: 'title'
    childOf:
      id: 'settings-language-nav-bar'
    text: '言語'

- tapOn:
    id: 'settings-language-en'
- assertVisible:
    id: 'title'
    childOf:
      id: 'settings-language-nav-bar'
    text: 'Language'
- assertVisible:
    id: 'settings-language-en'
    checked: true

- tapOn:
    id: 'back'
    childOf:
      id: 'settings-language-nav-bar'
- assertVisible:
    id: 'title'
    childOf:
      id: 'settings-nav-bar'
    text: 'Settings'
- assertVisible:
    id: 'tab-bar-item-settings'
    text: 'Settings'
